4 algorithms completed